--- a/Task-1/home.html
+++ b/Task-1/home.html
@@ -7,16 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <head>
+  <header>
     <nav id="navbar">
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="#home" class="">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-  </head>
+  </header>
 
   <div id="content">
     <!-- Your content here -->
